--- a/src/components/AppTitle/AppTitle.scss
+++ b/src/components/AppTitle/AppTitle.scss
@@ -1,11 +1,7 @@
-@import '../constants/colors';
-@import '../constants/templates';
-
-
+@import '../../constants/colors.scss';
+@import '../../constants/templates.scss';
 
 .wrapper {
-    width: 450px;
-    margin: 0 auto;
     display: flex;
     align-items: baseline;
     justify-content: center;
