--- a/src/components/FormAdd/FormAdd.scss
+++ b/src/components/FormAdd/FormAdd.scss
@@ -3,7 +3,7 @@
 
 .form-add {
     display: flex;
-    margin: 0 auto;
+    margin: 150px auto 30px;
     background-color: $input-bg;
     border-radius: 25px;
     max-width: 500px;
