--- a/src/components/AppFilter/AppFilter.scss
+++ b/src/components/AppFilter/AppFilter.scss
@@ -5,6 +5,7 @@
     display: flex;
     justify-content: center;
     column-gap: 25px;
+    margin-bottom: 40px;
 
     &__button {
         @extend %btn;
