--- a/src/components/AppTitle/AppTitle.scss
+++ b/src/components/AppTitle/AppTitle.scss
@@ -5,10 +5,11 @@
     display: flex;
     align-items: baseline;
     justify-content: center;
+    margin-bottom: 20px;
 }
 
 .title {
-    // color: $text;
+    color: $text;
     font-size: 40px;
 }
 
