--- a/src/components/FormAdd/FormAdd.scss
+++ b/src/components/FormAdd/FormAdd.scss
@@ -17,6 +17,10 @@
         padding: 0 5px 0 15px;
         border: none;
         border-radius: 25px 0 0 25px;
+
+        &::placeholder {
+            color: $input;
+        }
     }
 
     &__important-button {
@@ -28,7 +32,7 @@
         flex-shrink: 0;
         @extend %btn;
 
-        &.active {
+        &_active {
             background-image: url('../../assets/images/icons/important-button-active-icon.svg');
         }
     }
