feat: настроить работу сортировки

--- a/src/components/TaskItem/TaskItem.scss
+++ b/src/components/TaskItem/TaskItem.scss
@@ -45,8 +45,8 @@
     padding: 5px 15px;
     border: 1px solid;
     border-radius: 50px;
-    // position: relative;
-    // z-index: 5;
+    position: relative;
+    z-index: 5;
 }
 
 .todo-list__item-handle {
@@ -147,7 +147,7 @@
 }
 
 .context-item.context-item_hide {
-    transform: translateX(-150%);
+    transform: translateX(-120%);
     visibility: hidden;
     opacity: 0;
 }
