--- a/src/constants/colors.scss
+++ b/src/constants/colors.scss
@@ -1,12 +1,12 @@
 // colors tasks
 $important: #C80E0E;
-$important-bg: #370D0D80;
+$important-bg: #281316;
 
 $process: #DADE1E;
-$process-bg: #31320D80;
+$process-bg: #252515;
 
 $done: #15D728;
-$done-bg: #17411080;
+$done-bg: #182D17;
 
 $bg: #19191E;
 
