--- a/src/components/FormAdd/FormAdd.scss
+++ b/src/components/FormAdd/FormAdd.scss
@@ -17,6 +17,11 @@
         padding: 0 5px 0 15px;
         border: none;
         border-radius: 25px 0 0 25px;
+        
+        &:focus {
+            outline: $input solid 2px;
+            border-radius: 25px 5px 5px 25px;
+        }
 
         &::placeholder {
             color: $input;
