--- a/src/constants/colors.scss
+++ b/src/constants/colors.scss
@@ -12,7 +12,7 @@ $bg: #19191E;
 
 $delete: #EA9617;
 
-$input-bg: #282937;
+$input-bg: #282937; 
 
 $input: #7073BC;
 
@@ -21,3 +21,5 @@ $text: #ffffff;
 $disabled: #939393;
 
 $border: $input;
+
+$bg-popup: #232326;
