--- a/src/components/TaskItem/TaskItem.scss
+++ b/src/components/TaskItem/TaskItem.scss
@@ -53,6 +53,7 @@
     border: 1px solid;
     border-radius: 20px;
     z-index: 5;
+    word-break: break-all;
 
     @media screen and (max-width: 768px) {
         font-size: calc(20px + (24 - 20) * ((100vw - 320px) / (768 - 320)));
