--- a/src/components/PopupFilter/PopupFilter.scss
+++ b/src/components/PopupFilter/PopupFilter.scss
@@ -1,12 +1,21 @@
 @import '../../constants/colors.scss';
 @import '../../constants/templates.scss';
 
-.popup-filter {
+.popup {
     position: fixed;
     z-index: 100;
     top: 0;
     right: 0;
     bottom: 0;
+    left: 0;
+}
+
+.popup-filter {
+    position: absolute;
+    z-index: 150;
+    top: 0;
+    bottom: 0;
+    right: 0;
     padding-top: 120px;
     width: 250px;
     display: flex;
@@ -98,42 +107,41 @@
     }
 }
 
-.open-filter {
-    @extend .popup-filter__close;
-    display: none;
-    position: fixed;
-    z-index: 50;
-    background-image: url('../../assets/images/icons/filter-icon.svg');
-    border: 2px solid $input;
-    border-radius: 50%;
-    width: 60px;
-    height: 60px;
-    background-size: 40px 40px;
-    top: auto;
-    bottom: 25px;
-    opacity: .5;
+// .popup__close-button {
+//     @extend .popup-filter__close;
+//     display: none;
+//     position: fixed;
+//     z-index: 50;
+//     background-image: url('../../assets/images/icons/filter-icon.svg');
+//     border: 2px solid $input;
+//     border-radius: 50%;
+//     width: 60px;
+//     height: 60px;
+//     background-size: 40px 40px;
+//     top: auto;
+//     bottom: 25px;
+//     opacity: .5;
 
-    @media screen and (max-width: 620px) {
-        display: block;
-    }
-}
-
-
-.popup-enter-active,
-.popup-leave-active {
-  transition: transform .5s, opacity .3s;
-}
+//     @media screen and (max-width: 620px) {
+//         display: block;
+//     }
+// }
 
 
-.popup-enter-from,
-.popup-leave-to {
-  opacity: 0;
-  transform: translateX(100%);
-}
+// .popup-enter-active,
+// .popup-leave-active {
+//   transition: transform .4s, opacity .3s;
+// }
 
-.popup-enter-to,
-.popup-leave-from {
-    opacity: 1;
-    transform: translateX(0%);
-}
+// .popup-enter-from,
+// .popup-leave-to {
+//   opacity: 0;
+//   transform: translateX(100%);
+// }
+
+// .popup-enter-to,
+// .popup-leave-from {
+//     opacity: 1;
+//     transform: translateX(0%);
+// }
 
