--- a/src/components/FormAdd/FormAdd.scss
+++ b/src/components/FormAdd/FormAdd.scss
@@ -1,6 +1,6 @@
-@import '@/constants/colors.scss';
-@import '@/constants/templates.scss';
-@import '@/constants/icons.scss';
+@import "@/constants/colors.scss";
+@import "@/constants/templates.scss";
+@import "@/constants/icons.scss";
 
 .form-add {
     position: relative;
@@ -27,7 +27,7 @@
         padding: 0 5px 0 15px;
         border: none;
         border-radius: 25px 0 0 25px;
-        
+
         &:focus {
             outline: $input solid 2px;
             border-radius: 25px 5px 5px 25px;
@@ -77,7 +77,7 @@
 
 .error-enter-active,
 .error-leave-active {
-  transition: all .3s;
+    transition: all 0.3s;
 }
 
 .error-enter-from {
@@ -89,7 +89,7 @@
 .error-leave-from {
     transform: translateY(0);
     opacity: 1;
-  }
+}
 
 .error-leave-to {
     transform: translateY(15px);
