--- a/src/components/TaskItem/TaskItem.scss
+++ b/src/components/TaskItem/TaskItem.scss
@@ -1,6 +1,6 @@
-@import '@/constants/colors.scss';
-@import '@/constants/templates.scss';
-@import '@/constants/icons.scss';
+@import "@/constants/colors.scss";
+@import "@/constants/templates.scss";
+@import "@/constants/icons.scss";
 
 .todo-list__item {
     display: flex;
@@ -73,30 +73,29 @@
 
     &::after,
     &::before {
-        content: '';
+        content: "";
         position: absolute;
         top: -1px;
         left: 49px;
         width: 1px;
         height: 35px;
-        background-color: $border
+        background-color: $border;
     }
 
     &::after {
         left: 98px;
     }
-    
+
     &__button {
         @extend %btn;
         @extend %bgi;
         width: 50px;
         padding: 5px 0;
         background-size: 25px 25px;
-        transition: all .3s;
-        
+        transition: all 0.3s;
+
         &_important {
             background-image: $important-icon;
-            
         }
 
         &_done {
@@ -116,7 +115,7 @@
         &::after {
             content: none;
         }
-        
+
         .context-item__button_important {
             display: none;
         }
@@ -135,7 +134,7 @@
 
 .context-item-enter-active,
 .context-item-leave-active {
-  transition: transform .5s, opacity .3s, visibility .3s;
+    transition: transform 0.5s, opacity 0.3s, visibility 0.3s;
 }
 
 .context-item-enter-from,
@@ -150,4 +149,4 @@
     transform: translateX(0);
     visibility: visible;
     opacity: 1;
-  }
+}
